fix(backend): Adaptation of the API to changes in data types and integration functions
