# api_contract/openapi.json
@@ -4,8 +4,12 @@
       "CategoryListItem": {
         "properties": {
           "id": {
-            "description": "Stable category identifier",
             "title": "Id",
+            "type": "integer"
+          },
+          "key": {
+            "description": "Stable category identifier",
+            "title": "Key",
             "type": "string"
           },
           "name": {
@@ -16,6 +20,7 @@
         },
         "required": [
           "id",
+          "key",
           "name"
         ],
         "title": "CategoryListItem",
@@ -24,15 +29,8 @@
       "DataOverview": {
         "properties": {
           "anomalie": {
-            "anyOf": [
-              {
-                "type": "boolean"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Anomalie"
+            "title": "Anomalie",
+            "type": "number"
           },
           "category": {
             "title": "Category",
@@ -70,7 +68,8 @@
           "umap_z",
           "label",
           "category",
-          "filename"
+          "filename",
+          "anomalie"
         ],
         "title": "DataOverview",
         "type": "object"
@@ -160,6 +159,49 @@
   },
   "openapi": "3.1.0",
   "paths": {
+    "/api/v1/sounds/audio/{uuid}": {
+      "get": {
+        "operationId": "get_audio_by_uuid_api_v1_sounds_audio__uuid__get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "uuid",
+            "required": true,
+            "schema": {
+              "title": "Uuid",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "title": "Response Get Audio By Uuid Api V1 Sounds Audio  Uuid  Get",
+                  "type": "string"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Get Audio By Uuid",
+        "tags": [
+          "sounds"
+        ]
+      }
+    },
     "/api/v1/sounds/categories": {
       "get": {
         "operationId": "get_category_list_api_v1_sounds_categories_get",
@@ -195,7 +237,7 @@
             "required": true,
             "schema": {
               "title": "Category Id",
-              "type": "string"
+              "type": "integer"
             }
           }
         ],
